compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecated_option_binary_expression.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 532
expression: "pub fn main(x) {\n  <<x:binary>>\n}"
---

warning: Deprecated bit literal option
  ┌─ :2:7
  │
2 │   <<x:binary>>
  │       ^^^^^^

This option has been replaced by the `bytes` option.

Hint: Run `gleam format` to auto-fix your code.

