compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecated_option_bit_string_const.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 503
expression: "pub const x = <<<<>>:bits>>"
---

warning: Deprecated bit literal option
  ┌─ :1:22
  │
1 │ pub const x = <<<<>>:bits>>
  │                      ^^^^^^^^^^

This option has been replaced by the `bits` option.

Hint: Run `gleam format` to auto-fix your code.

