compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecated_option_bit_string_expression.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 508
expression: "pub fn main(x) {\n  <<x:bits>>\n}"
---

warning: Deprecated bit literal option
  ┌─ :2:7
  │
2 │   <<x:bits>>
  │       ^^^^^^^^^^

This option has been replaced by the `bits` option.

Hint: Run `gleam format` to auto-fix your code.

