compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecated_option_bit_string_pattern.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 517
expression: "pub fn main(x) {\n  let assert <<y:bits>> = x\n  y\n}"
---

warning: Deprecated bit literal option
  ┌─ :2:18
  │
2 │   let assert <<y:bits>> = x
  │                  ^^^^^^^^^^

This option has been replaced by the `bits` option.

Hint: Run `gleam format` to auto-fix your code.

