compiler-core/src/parse/snapshots/gleam_core__parse__tests__deprecation_with_no_message.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@deprecated\npub fn main() -> Nil {\n  Nil\n}\n"
---
----- SOURCE CODE

@deprecated
pub fn main() -> Nil {
  Nil
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @deprecated
  │ ^^^^^^^^^^^ A deprecation attribute must have a string message.

See: https://tour.gleam.run/functions/deprecations/
